--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -75,25 +75,29 @@
 					<h2 class="section-title"><a class ="section-link" href="#hero-container">WEB</a></h2>
                     <ul class="vignette-list">
                         <li class="vignette-list-item">
-                            <div>
-                                <h3 class="vignette-item-title">Move The Sun</h3>
-                                <p class="vignette-item-paragraph">Behold how the sky transforms as the sun reaches the horizon.</p>
+                            <div class="vignette-item-text">
+                                <h3>Move The Sun</h3>
+                                <p>Behold how the sky transforms as the sun reaches the horizon.</p>
                             </div>
-                            <iframe scrolling="no" title="Move the Sun" src="https://codepen.io/Iker-Karkokli-Iturrioz/embed/wvVPOdd?default-tab=result" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-                                See the Pen <a href="https://codepen.io/Iker-Karkokli-Iturrioz/pen/wvVPOdd">
-                                Move the Sun</a> by Iker Karkokli Iturrioz (<a href="https://codepen.io/Iker-Karkokli-Iturrioz">@Iker-Karkokli-Iturrioz</a>)
-                                on <a href="https://codepen.io">CodePen</a>.</iframe>
+                            <div class="vignette-item-content">
+                                <iframe scrolling="no" title="Move the Sun" src="https://codepen.io/Iker-Karkokli-Iturrioz/embed/wvVPOdd?default-tab=result" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+                                    See the Pen <a href="https://codepen.io/Iker-Karkokli-Iturrioz/pen/wvVPOdd">
+                                    Move the Sun</a> by Iker Karkokli Iturrioz (<a href="https://codepen.io/Iker-Karkokli-Iturrioz">@Iker-Karkokli-Iturrioz</a>)
+                                    on <a href="https://codepen.io">CodePen</a>.</iframe>
+                            </div>
                         </li>
                         <li class="vignette-list-item">
-                            <div>
-                                <h3 class="vignette-item-title">SVG Burger Button</h3>
-                                <p class="vignette-item-paragraph">Smooth and fully customizable SVG burger button with seamless transitions.</p>
+                            <div class="vignette-item-text">
+                                <h3>SVG Burger Button</h3>
+                                <p>Smooth and fully customizable SVG burger button with seamless transitions.</p>
                             </div>
-                            <iframe scrolling="no" title="Burger Button" src="https://codepen.io/Iker-Karkokli-Iturrioz/embed/KKOyPXW?default-tab=result" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-                                See the Pen <a href="https://codepen.io/Iker-Karkokli-Iturrioz/pen/KKOyPXW">
-                                Burger Button</a> by Iker Karkokli Iturrioz (<a href="https://codepen.io/Iker-Karkokli-Iturrioz">@Iker-Karkokli-Iturrioz</a>)
-                                on <a href="https://codepen.io">CodePen</a>.
-                              </iframe>
+                            <div class="vignette-item-content">
+                                <iframe scrolling="no" title="Burger Button" src="https://codepen.io/Iker-Karkokli-Iturrioz/embed/KKOyPXW?default-tab=result" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+                                    See the Pen <a href="https://codepen.io/Iker-Karkokli-Iturrioz/pen/KKOyPXW">
+                                    Burger Button</a> by Iker Karkokli Iturrioz (<a href="https://codepen.io/Iker-Karkokli-Iturrioz">@Iker-Karkokli-Iturrioz</a>)
+                                    on <a href="https://codepen.io">CodePen</a>.
+                                </iframe>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -104,20 +108,24 @@
 					<h2 class="section-title"><a class ="section-link" href="#hero-container">VIDEOGAMES</a></h2>
                     <ul class="vignette-list">
                         <li class="vignette-list-item">
-                            <div>
-                                <h3 class="vignette-item-title">The Greatest Composer</h3>
-                                <p class="vignette-item-paragraph">Step into the shoes of a police officer with a dream of becoming the greatest composer.</p>
+                            <div class="vignette-item-text">
+                                <h3>The Greatest Composer</h3>
+                                <p>Step into the shoes of a police officer with a dream of becoming the greatest composer.</p>
                             </div>
-                            <a class="vignette-link" href="https://ttshhh.itch.io/the-greatest-composer" target="_blank" rel="noopener noreferrer">
-                                <img class="vignette-link-image" src="https://raw.githubusercontent.com/iturriker/portfolio/refs/heads/main/Imagenes/Pajaros/1.jpg" alt="">
-                            </a>
+                            <div class="vignette-item-content">
+                                <a href="https://ttshhh.itch.io/the-greatest-composer" target="_blank" rel="noopener noreferrer">
+                                    <img src="https://img.itch.zone/aW1nLzE3MDEwOTE2LmpwZw==/original/vXjfv%2F.jpg" alt="">
+                                </a>
+                            </div>
                         </li>
                         <li class="vignette-list-item">
-                            <div>
-                                <h3 class="vignette-item-title">Moth Tactics</h3>
-                                <p class="vignette-item-paragraph">Free your world from a violent moth infestation (currently in development).</p>
+                            <div class="vignette-item-text">
+                                <h3>Moth Tactics</h3>
+                                <p>Free your world from a violent moth infestation (currently in development).</p>
                             </div>
-                            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0?si=EAaU8BJ5Gv3qmR-Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <div class="vignette-item-content">
+                                <iframe src="https://www.youtube.com/embed/JkaxUblCGz0?si=EAaU8BJ5Gv3qmR-Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            </div>
                         </li>
                     </ul>
                 </div>
