Codepen vignettes new config, added new web project

--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,7 @@
         <link rel="stylesheet" href="link-nav.css">
 
         <link rel="stylesheet" href="vignette.css">
+        <link rel="stylesheet" href="codepen.css">
     </head>
 
     <body>
@@ -79,10 +80,24 @@
                                 <p>Behold how the sky transforms as the sun reaches the horizon.</p>
                             </div>
                             <div class="vignette-item-content">
-                                <iframe scrolling="no" title="Move the Sun" src="https://codepen.io/Iker-Karkokli-Iturrioz/embed/wvVPOdd?default-tab=result" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-                                    See the Pen <a href="https://codepen.io/Iker-Karkokli-Iturrioz/pen/wvVPOdd">
-                                    Move the Sun</a> by Iker Karkokli Iturrioz (<a href="https://codepen.io/Iker-Karkokli-Iturrioz">@Iker-Karkokli-Iturrioz</a>)
-                                    on <a href="https://codepen.io">CodePen</a>.</iframe>
+                                <p class="codepen" data-theme-id="41" data-animations="run" data-zoom="0.5" data-border="none" data-default-tab="result" data-slug-hash="wvVPOdd" data-pen-title="Move the Sun" data-user="iturriker">
+                                    <span>Something went wrong while loading. See the Pen <a href="https://codepen.io/iturriker/pen/wvVPOdd">
+                                    Move the Sun</a> by Iker Karkokli (<a href="https://codepen.io/iturriker">@iturriker</a>)
+                                    on <a href="https://codepen.io">CodePen</a>.</span>
+                                </p>
+                            </div>
+                        </li>
+                        <li class="vignette-list-item">
+                            <div class="vignette-item-text">
+                                <h3>Race Controller</h3>
+                                <p>Racing UI simulator controller.</p>
+                            </div>
+                            <div class="vignette-item-content">
+                                <p class="codepen" data-theme-id="41" data-animations="run" data-zoom="0.5" data-border="none" data-default-tab="result" data-slug-hash="vYobYXo" data-pen-title="Race Controller" data-user="iturriker">
+                                    <span>Something went wrong while loading. See the Pen <a href="https://codepen.io/iturriker/pen/vYobYXo">
+                                    Race Controller</a> by Iker Karkokli (<a href="https://codepen.io/iturriker">@iturriker</a>)
+                                    on <a href="https://codepen.io">CodePen</a>.</span>
+                                </p>
                             </div>
                         </li>
                         <li class="vignette-list-item">
@@ -91,11 +106,11 @@
                                 <p>Smooth and fully customizable SVG burger button with seamless transitions.</p>
                             </div>
                             <div class="vignette-item-content">
-                                <iframe scrolling="no" title="Burger Button" src="https://codepen.io/Iker-Karkokli-Iturrioz/embed/KKOyPXW?default-tab=result" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-                                    See the Pen <a href="https://codepen.io/Iker-Karkokli-Iturrioz/pen/KKOyPXW">
-                                    Burger Button</a> by Iker Karkokli Iturrioz (<a href="https://codepen.io/Iker-Karkokli-Iturrioz">@Iker-Karkokli-Iturrioz</a>)
-                                    on <a href="https://codepen.io">CodePen</a>.
-                                </iframe>
+                                <p class="codepen" data-theme-id="41" data-animations="run" data-zoom="0.5" data-border="none" data-default-tab="result" data-slug-hash="KKOyPXW" data-pen-title="Burger Button" data-user="iturriker">
+                                    <span>Something went wrong while loading. See the Pen <a href="https://codepen.io/iturriker/pen/KKOyPXW">
+                                    Burger Button</a> by Iker Karkokli (<a href="https://codepen.io/iturriker">@iturriker</a>)
+                                    on <a href="https://codepen.io">CodePen</a>.</span>
+                                </p>
                             </div>
                         </li>
                     </ul>
@@ -143,7 +158,8 @@
 				<p class ="license-text">&copy; <span id="year"></span> Iker Karkokli. MIT Lisence.</p>
 			</div>
 		</footer>
-
+        
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
