--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,7 @@
                     <ul class="vignette-list">
                         <li class="vignette-list-item">
                             <div class="vignette-item-text">
-                                <h3><a href="https://codepen.io/iturriker/pen/wvVPOdd" class="icon-arrow" target="_blank" rel="noopener noreferrer">Move The Sun</a></h3>
+                                <h3><a href="https://codepen.io/iturriker/pen/wvVPOdd" class="icon-arrow-up" target="_blank" rel="noopener noreferrer">Move The Sun</a></h3>
                                 <p>Behold how the sky transforms as the sun reaches the horizon.</p>
                             </div>
                             <div class="vignette-item-content">
@@ -91,7 +91,7 @@
                         </li>
                         <li class="vignette-list-item">
                             <div class="vignette-item-text">
-                                <h3><a href="https://codepen.io/iturriker/pen/vYobYXo" class="icon-arrow" target="_blank" rel="noopener noreferrer">Race Controller</a></h3>
+                                <h3><a href="https://codepen.io/iturriker/pen/vYobYXo" class="icon-arrow-up" target="_blank" rel="noopener noreferrer">Race Controller</a></h3>
                                 <p>Racing UI simulator controller.</p>
                             </div>
                             <div class="vignette-item-content">
@@ -104,7 +104,7 @@
                         </li>
                         <li class="vignette-list-item">
                             <div class="vignette-item-text">
-                                <h3><a href="https://codepen.io/iturriker/pen/KKOyPXW" class="icon-arrow" target="_blank" rel="noopener noreferrer">SVG Burger Button</a></h3>
+                                <h3><a href="https://codepen.io/iturriker/pen/KKOyPXW" class="icon-arrow-up" target="_blank" rel="noopener noreferrer">SVG Burger Button</a></h3>
                                 <p>Smooth and fully customizable SVG burger button with seamless transitions.</p>
                             </div>
                             <div class="vignette-item-content">
@@ -125,7 +125,7 @@
                     <ul class="vignette-list">
                         <li class="vignette-list-item">
                             <div class="vignette-item-text">
-                                <h3><a href="https://ttshhh.itch.io/the-greatest-composer" class="icon-arrow" target="_blank" rel="noopener noreferrer">The Greatest Composer</a></h3>
+                                <h3><a href="https://ttshhh.itch.io/the-greatest-composer" class="icon-arrow-up" target="_blank" rel="noopener noreferrer">The Greatest Composer</a></h3>
                                 <p>Step into the shoes of a police officer with a dream of becoming the greatest composer.</p>
                             </div>
                             <div class="vignette-item-content">
@@ -136,7 +136,7 @@
                         </li>
                         <li class="vignette-list-item">
                             <div class="vignette-item-text">
-                                <h3><a href="#" class="icon-arrow" target="_blank" rel="noopener noreferrer">Moth Tactics</a></h3>
+                                <h3><a href="#" class="icon-arrow-up" target="_blank" rel="noopener noreferrer">Moth Tactics</a></h3>
                                 <p>Free your world from a violent moth infestation (currently in development).</p>
                             </div>
                             <div class="vignette-item-content">
