--- a/projects.html
+++ b/projects.html
@@ -67,8 +67,6 @@
                 <ul class="link-list">
                     <li class="link-list-item"><a href="#web-section">WEB</a></li>
                     <li class="link-list-item"><a href="#videogames-section">VIDEOGAMES</a></li>
-                    <li class="link-list-item"><a href="#VBA-section">VBA</a></li>
-                    <li class="link-list-item"><a href="#PowerBI-section">POWER BI</a></li>
                 </ul>
             </nav>
 
@@ -83,7 +81,7 @@
                             </div>
                             <div class="vignette-item-content">
                                 <p class="codepen" data-theme-id="41" data-animations="run" data-zoom="0.5" data-border="none" data-default-tab="result" data-slug-hash="wvVPOdd" data-pen-title="Move the Sun" data-user="iturriker">
-                                    <span>Something went wrong while loading. See the Pen <a href="https://codepen.io/iturriker/pen/wvVPOdd">
+                                    <span class="icon-confused">Something went wrong while loading. See the Pen <a href="https://codepen.io/iturriker/pen/wvVPOdd">
                                     Move the Sun</a> by Iker Karkokli (<a href="https://codepen.io/iturriker">@iturriker</a>)
                                     on <a href="https://codepen.io">CodePen</a>.</span>
                                 </p>
@@ -96,7 +94,7 @@
                             </div>
                             <div class="vignette-item-content">
                                 <p class="codepen" data-theme-id="41" data-animations="run" data-zoom="0.5" data-border="none" data-default-tab="result" data-slug-hash="vYobYXo" data-pen-title="Race Controller" data-user="iturriker">
-                                    <span>Something went wrong while loading. See the Pen <a href="https://codepen.io/iturriker/pen/vYobYXo">
+                                    <span class="icon-confused">Something went wrong while loading. See the Pen <a href="https://codepen.io/iturriker/pen/vYobYXo">
                                     Race Controller</a> by Iker Karkokli (<a href="https://codepen.io/iturriker">@iturriker</a>)
                                     on <a href="https://codepen.io">CodePen</a>.</span>
                                 </p>
@@ -109,7 +107,7 @@
                             </div>
                             <div class="vignette-item-content">
                                 <p class="codepen" data-theme-id="41" data-animations="run" data-zoom="0.5" data-border="none" data-default-tab="result" data-slug-hash="KKOyPXW" data-pen-title="Burger Button" data-user="iturriker">
-                                    <span>Something went wrong while loading. See the Pen <a href="https://codepen.io/iturriker/pen/KKOyPXW">
+                                    <span class="icon-confused">Something went wrong while loading. See the Pen <a href="https://codepen.io/iturriker/pen/KKOyPXW">
                                     Burger Button</a> by Iker Karkokli (<a href="https://codepen.io/iturriker">@iturriker</a>)
                                     on <a href="https://codepen.io">CodePen</a>.</span>
                                 </p>
@@ -137,10 +135,11 @@
                         <li class="vignette-list-item">
                             <div class="vignette-item-text">
                                 <h3><a href="#" class="icon-arrow-up" target="_blank" rel="noopener noreferrer">Moth Tactics</a></h3>
-                                <p>Free your world from a violent moth infestation (currently in development).</p>
+                                <p>Free your world from a violent moth infestation.</p>
                             </div>
                             <div class="vignette-item-content">
-                                <iframe src="https://www.youtube.com/embed/JkaxUblCGz0?si=EAaU8BJ5Gv3qmR-Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <p class="icon-spinner">Project currently under development, no media available yet</p>
+                                <!--<iframe src="https://www.youtube.com/embed/JkaxUblCGz0?si=EAaU8BJ5Gv3qmR-Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>-->
                             </div>
                         </li>
                     </ul>
