--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400..800&family=Comfortaa:wght@300..700&family=Dosis:wght@200..800&family=Shadows+Into+Light&display=swap" rel="stylesheet">
         
-        <link rel="stylesheet" href="/Icomoon/style.css">
+        <link rel="stylesheet" href="Icomoon/style.css">
 
         <!--<link rel="stylesheet" href="reset.css">-->
         <link rel="stylesheet" href="common.css">
