--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
                     <ul class="vignette-list">
                         <li class="vignette-list-item">
                             <div class="vignette-item-text">
-                                <h3><a href="https://codepen.io/iturriker/pen/wvVPOdd" class="icon-arrow-up" target="_blank" rel="noopener noreferrer">Move The Sun</a></h3>
+                                <h3><a href="https://codepen.io/iturriker/pen/wvVPOdd" class="icon-arrow-right" target="_blank" rel="noopener noreferrer">Move The Sun</a></h3>
                                 <p>Behold how the sky transforms as the sun reaches the horizon.</p>
                             </div>
                             <div class="vignette-item-content">
@@ -89,8 +89,8 @@
                         </li>
                         <li class="vignette-list-item">
                             <div class="vignette-item-text">
-                                <h3><a href="https://codepen.io/iturriker/pen/vYobYXo" class="icon-arrow-up" target="_blank" rel="noopener noreferrer">Race Controller</a></h3>
-                                <p>Racing UI simulator controller.</p>
+                                <h3><a href="https://codepen.io/iturriker/pen/vYobYXo" class="icon-arrow-right" target="_blank" rel="noopener noreferrer">Race Controller</a></h3>
+                                <p>Set the Min and Max speed to see the changes on this racing simulator.</p>
                             </div>
                             <div class="vignette-item-content">
                                 <p class="codepen" data-theme-id="41" data-animations="run" data-zoom="0.5" data-border="none" data-default-tab="result" data-slug-hash="vYobYXo" data-pen-title="Race Controller" data-user="iturriker">
@@ -102,7 +102,20 @@
                         </li>
                         <li class="vignette-list-item">
                             <div class="vignette-item-text">
-                                <h3><a href="https://codepen.io/iturriker/pen/KKOyPXW" class="icon-arrow-up" target="_blank" rel="noopener noreferrer">SVG Burger Button</a></h3>
+                                <h3><a href="https://codepen.io/iturriker/pen/vEBBJdz" class="icon-arrow-right" target="_blank" rel="noopener noreferrer">Item Selector</a></h3>
+                                <p>Click items to expand the information</p>
+                            </div>
+                            <div class="vignette-item-content">
+                                <p class="codepen" data-theme-id="41" data-animations="run" data-zoom="0.5" data-border="none" data-default-tab="result" data-slug-hash="QwLLaGe" data-pen-title="Item Selector" data-user="iturriker">
+                                    <span class="icon-confused">Something went wrong while loading. See the Pen <a href="https://codepen.io/iturriker/pen/QwLLaGe">
+                                    Item Selector</a> by Iker Karkokli (<a href="https://codepen.io/iturriker">@iturriker</a>)
+                                    on <a href="https://codepen.io">CodePen</a>.</span>
+                                  </p>
+                            </div>
+                        </li>
+                        <li class="vignette-list-item">
+                            <div class="vignette-item-text">
+                                <h3><a href="https://codepen.io/iturriker/pen/KKOyPXW" class="icon-arrow-right" target="_blank" rel="noopener noreferrer">SVG Burger Button</a></h3>
                                 <p>Smooth and fully customizable SVG burger button with seamless transitions.</p>
                             </div>
                             <div class="vignette-item-content">
@@ -123,7 +136,7 @@
                     <ul class="vignette-list">
                         <li class="vignette-list-item">
                             <div class="vignette-item-text">
-                                <h3><a href="https://ttshhh.itch.io/the-greatest-composer" class="icon-arrow-up" target="_blank" rel="noopener noreferrer">The Greatest Composer</a></h3>
+                                <h3><a href="https://ttshhh.itch.io/the-greatest-composer" class="icon-arrow-right" target="_blank" rel="noopener noreferrer">The Greatest Composer</a></h3>
                                 <p>Step into the shoes of a police officer with a dream of becoming the greatest composer.</p>
                             </div>
                             <div class="vignette-item-content">
@@ -134,7 +147,7 @@
                         </li>
                         <li class="vignette-list-item">
                             <div class="vignette-item-text">
-                                <h3><a href="#" class="icon-arrow-up" target="_blank" rel="noopener noreferrer">Moth Tactics</a></h3>
+                                <h3><a href="#" class="icon-arrow-right" target="_blank" rel="noopener noreferrer">Moth Tactics</a></h3>
                                 <p>Free your world from a violent moth infestation.</p>
                             </div>
                             <div class="vignette-item-content">
