--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<section id="grid-section">
 				<ul class="grid-list">
 					<li class="grid-list-item">
-						<div class="grid-list-text">
+						<div>
 							<h3>Lorem Ipsum</h3>
 							<ul class="section-text-list">
 								<li class="section-text-list-item"><strong>IMPROVEMENT:</strong> I try to improve every day. I usually practice introspection to analyze myself and identify my weaknesses.</li>
@@ -73,28 +73,24 @@
 								<li class="section-text-list-item"><strong>NATURE:</strong> Fan of the colors and scents of life. I love animals and the wind.</li>
 							</ul>
 						</div>
-						<div class="grid-list-img">
-							<img src="https://raw.githubusercontent.com/iturriker/portfolio/refs/heads/main/Imagenes/Pajaros/1.jpg" alt="">
-						</div>
+						<img src="https://raw.githubusercontent.com/iturriker/portfolio/refs/heads/main/Imagenes/Pajaros/1.jpg" alt="">
 					</li>
 					<li class="grid-list-item">
-						<div class="grid-list-text">
+						<div>
 							<h3>Lorem Ipsum</h3>
 							<ul class="section-text-list">
 								<li class="section-text-list-item"><strong>IMPROVE:</strong> My dedication is focused on making everything run more smoothly. I have a problem-solving approach and business mindset. </li>
 								<li class="section-text-list-item"><strong>RELATIONS:</strong> Throughout my life, I have developed a proactive and outgoing attitude that allows me to speak and persuade with ease, enabling me to create strong connections with people.</li>
 							</ul>
 						</div>
-						<div class="grid-list-img">
-							<img src="https://raw.githubusercontent.com/iturriker/portfolio/refs/heads/main/Imagenes/Pajaros/2.jpg" alt="">
-						</div>
+						<img src="https://raw.githubusercontent.com/iturriker/portfolio/refs/heads/main/Imagenes/Pajaros/2.jpg" alt="">
 					</li>
 					<li class="grid-list-item">
-						<div class="grid-list-text">
+						<div>
 							<h3>Lorem Ipsum</h3>
 							<div class="section-special-container-text">
 								<div class="section-special-container-list">
-									<h3>BUSINESS MANAGEMENT</h3>
+									<h4>BUSINESS MANAGEMENT</h3>
 									<ul class="section-text-list">
 										<li class="section-text-list-item"><strong>Business Process Improvement</strong></li>
 										<li class="section-text-list-item"><strong>Business Intelligence Analyst</strong></li>
@@ -102,7 +98,7 @@
 									</ul>
 								</div>
 								<div class="section-special-container-list">
-									<h3>SOFTWARE DEVELOPMENT</h3>
+									<h4>SOFTWARE DEVELOPMENT</h3>
 									<ul class="section-text-list">
 										<li class="section-text-list-item"><strong>Front-End Web Development</strong></li>
 										<li class="section-text-list-item"><strong>VideoGame Development</strong></li>
@@ -111,9 +107,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="grid-list-img">
-							<img src="https://raw.githubusercontent.com/iturriker/portfolio/refs/heads/main/Imagenes/Pajaros/3.jpg" alt="">
-						</div>
+						<img src="https://raw.githubusercontent.com/iturriker/portfolio/refs/heads/main/Imagenes/Pajaros/3.jpg" alt="">
 					</li>
 				</ul>
 			</section>
