Portfolio text updated, projects titles sticky, minnor changes

--- a/index.html
+++ b/index.html
@@ -82,22 +82,22 @@
 					</li>
 					<li class="intro-list-item">
 						<div>
-							<h3>Lorem Ipsum</h3>
+							<h3>Expertise</h3>
 							<div class="intro-list-item-wrap">
 								<div>
-									<h4>BUSINESS MANAGEMENT</h3>
+									<h4>Business management</h3>
 									<ul class="intro-list-item-list">
-										<li><strong>Business Process Improvement</strong></li>
-										<li><strong>Business Intelligence Analyst</strong></li>
-										<li><strong>Project Management</strong></li>
+										<li><strong>Digital transformation</strong></li>
+										<li><strong>Business Intelligence</strong></li>
+										<li><strong>Project Accountant</strong></li>
 									</ul>
 								</div>
 								<div>
-									<h4>SOFTWARE DEVELOPMENT</h3>
+									<h4>Software development</h3>
 									<ul class="intro-list-item-list">
-										<li><strong>Front-End Web Development</strong></li>
-										<li><strong>VideoGame Development</strong></li>
-										<li><strong>VBA Tools Development</strong></li>
+										<li><strong>Web Front-End</strong></li>
+										<li><strong>Unity VideoGames</strong></li>
+										<li><strong>UI / UX</strong></li>
 									</ul>
 								</div>
 							</div>
