--- a/projects.html
+++ b/projects.html
@@ -60,17 +60,10 @@
             </div>
         </div>
 
-        <main class="lat-pad long-pad">
-            <nav>
-                <ul class="link-list">
-                    <li><a href="#web">WEB</a></li>
-                    <li><a href="#videogames">VIDEOGAMES</a></li>
-                </ul>
-            </nav>
-
+        <main>
             <section id="web" class="vignette">
-                <h2 class ="vignette-title"><a href="#hero-container">WEB</a></h2>
-                <ul class="vignette-list">
+                <h2 class ="vignette-title"><a href="#web">WEB</a></h2>
+                <ul class="vignette-list lat-pad long-pad">
                     <li class="vignette-list-item">
                         <div class="vignette-item-text">
                             <h3><a href="https://codepen.io/iturriker/pen/wvVPOdd" class="icon-arrow-right" target="_blank" rel="noopener noreferrer">Move The Sun</a></h3>
@@ -127,8 +120,8 @@
             </section>
 
             <section id="videogames" class="vignette">
-                <h2 class ="vignette-title"><a href="#hero-container">VIDEOGAMES</a></h2>
-                <ul class="vignette-list">
+                <h2 class ="vignette-title"><a href="#videogames">VIDEOGAMES</a></h2>
+                <ul class="vignette-list lat-pad long-pad">
                     <li class="vignette-list-item">
                         <div class="vignette-item-text">
                             <h3><a href="https://ttshhh.itch.io/the-greatest-composer" class="icon-arrow-right" target="_blank" rel="noopener noreferrer">The Greatest Composer</a></h3>
