--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
         <main>
             <section id="web" class="vignette">
                 <h2 class ="vignette-title"><a href="#web">WEB</a></h2>
-                <ul class="vignette-list lat-pad long-pad">
+                <ul class="vignette-list">
                     <li class="vignette-list-item">
                         <div class="vignette-item-text">
                             <h3><a href="https://codepen.io/iturriker/pen/wvVPOdd" class="icon-arrow-right" target="_blank" rel="noopener noreferrer">Move The Sun</a></h3>
@@ -92,8 +92,8 @@
                     </li>
                     <li class="vignette-list-item">
                         <div class="vignette-item-text">
-                            <h3><a href="https://codepen.io/iturriker/pen/vEBBJdz" class="icon-arrow-right" target="_blank" rel="noopener noreferrer">Item Selector</a></h3>
-                            <p>Click items to expand the information</p>
+                            <h3><a href="https://codepen.io/iturriker/pen/QwLLaGe" class="icon-arrow-right" target="_blank" rel="noopener noreferrer">Item Selector</a></h3>
+                            <p>Interactive item gallery. Click items to expand their information.</p>
                         </div>
                         <div class="vignette-item-content">
                             <p class="codepen" data-theme-id="41" data-animations="run" data-zoom="0.5" data-border="none" data-default-tab="result" data-slug-hash="QwLLaGe" data-pen-title="Item Selector" data-user="iturriker">
@@ -105,13 +105,13 @@
                     </li>
                     <li class="vignette-list-item">
                         <div class="vignette-item-text">
-                            <h3><a href="https://codepen.io/iturriker/pen/KKOyPXW" class="icon-arrow-right" target="_blank" rel="noopener noreferrer">SVG Burger Button</a></h3>
-                            <p>Smooth and fully customizable SVG burger button with seamless transitions.</p>
+                            <h3><a href="https://codepen.io/iturriker/pen/zxOGjaY" class="icon-arrow-right" target="_blank" rel="noopener noreferrer">Wave Shader</a></h3>
+                            <p>Wave shader prototype with GLSL code.</p>
                         </div>
                         <div class="vignette-item-content">
-                            <p class="codepen" data-theme-id="41" data-animations="run" data-zoom="0.5" data-border="none" data-default-tab="result" data-slug-hash="KKOyPXW" data-pen-title="Burger Button" data-user="iturriker">
-                                <span class="icon-confused">Something went wrong while loading. See the Pen <a href="https://codepen.io/iturriker/pen/KKOyPXW">
-                                Burger Button</a> by Iker Karkokli (<a href="https://codepen.io/iturriker">@iturriker</a>)
+                            <p class="codepen" data-theme-id="41" data-animations="run" data-zoom="0.5" data-border="none" data-default-tab="result" data-slug-hash="zxOGjaY" data-pen-title="Wave Shader" data-user="iturriker">
+                                <span class="icon-confused">Something went wrong while loading. See the Pen <a href="https://codepen.io/iturriker/pen/zxOGjaY">
+                                Wave Shader</a> by Iker Karkokli (<a href="https://codepen.io/iturriker">@iturriker</a>)
                                 on <a href="https://codepen.io">CodePen</a>.</span>
                             </p>
                         </div>
@@ -121,7 +121,7 @@
 
             <section id="videogames" class="vignette">
                 <h2 class ="vignette-title"><a href="#videogames">VIDEOGAMES</a></h2>
-                <ul class="vignette-list lat-pad long-pad">
+                <ul class="vignette-list">
                     <li class="vignette-list-item">
                         <div class="vignette-item-text">
                             <h3><a href="https://ttshhh.itch.io/the-greatest-composer" class="icon-arrow-right" target="_blank" rel="noopener noreferrer">The Greatest Composer</a></h3>
@@ -161,5 +161,6 @@
         
         <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
         <script src="index.js"></script>
+        <script src="vignette.js"></script>
     </body>
 </html>
