Added Book CSR project

--- a/projects.html
+++ b/projects.html
@@ -116,6 +116,19 @@
                             </p>
                         </div>
                     </li>
+                    <li class="vignette-list-item">
+                        <div class="vignette-item-text">
+                            <h3><a href="https://codepen.io/iturriker/pen/GgKmwbq" class="icon-arrow-right" target="_blank" rel="noopener noreferrer">Book CSR</a></h3>
+                            <p>Book layout for CSR (Client Side Render) web design.</p>
+                        </div>
+                        <div class="vignette-item-content">
+                            <p class="codepen" data-theme-id="41" data-animations="run" data-zoom="0.5" data-border="none" data-default-tab="result" data-slug-hash="GgKmwbq" data-pen-title="Book CSR" data-user="iturriker">
+                                <span class="icon-confused">Something went wrong while loading. See the Pen <a href="https://codepen.io/iturriker/pen/GgKmwbq">
+                                Book CSR</a> by Iker Karkokli (<a href="https://codepen.io/iturriker">@iturriker</a>)
+                                on <a href="https://codepen.io">CodePen</a>.</span>
+                            </p>
+                        </div>
+                    </li>
                 </ul>
             </section>
 
