added websites section and new raw group project

--- a/projects.html
+++ b/projects.html
@@ -59,8 +59,25 @@
         </div>
 
         <main>
-            <section id="web" class="vignette">
-                <h2 class ="vignette-title"><a href="#web">WEB</a></h2>
+            <section id="websites" class="vignette">
+                <h2 class ="vignette-title"><a href="#websites">WEBSITES</a></h2>
+                <ul class="vignette-list">
+                    <li class="vignette-list-item">
+                        <div class="vignette-item-text">
+                            <h3><a href="https://iturriker.github.io/grupo-raw" class="icon-arrow-right" target="_blank" rel="noopener noreferrer">RAW GROUP</a></h3>
+                            <p>Your ally in athletic development, offering personalized training, coaching, and services to enhance health and performance.</p>
+                        </div>
+                        <div class="vignette-item-content">
+                            <a href="https://iturriker.github.io/grupo-raw" target="_blank" rel="noopener noreferrer">
+                                <img src="Imagenes/Otros/trainer.jpg" alt="">
+                            </a>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+
+            <section id="creatives" class="vignette">
+                <h2 class ="vignette-title"><a href="#creatives">CREATIVES</a></h2>
                 <ul class="vignette-list">
                     <li class="vignette-list-item">
                         <div class="vignette-item-text">
